2007-05-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm (AQUA_options): Allow terminal window ID to come
	from a variable.  Bug #1714070

2007-05-05  Timothee Lecomte  <timothee.lecomte@ens.fr>

        * src/wxterminal/wxt_gui.cpp (wxtThread::Entry):
        Fix the initialization of a sigset_t. The structure is not meant to be
        known, functions are provided instead. The previous code was
        completely wrong on non GNU systems.

2007-05-04  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/gd.trm (PNG_image): Fixed an image clipping bug in x dimension.

2007-05-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (key_sample_point_pm3d):  The sample point in the key
	failed to note an explicit "lc rgb 'foo'" in the plot command, leading
	to a color mismatch between the plot and the key.  Bugfix.

2007-04-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): Correct Z coordinate of xyplane for log
	scale on Z.  Bug #1703370.

2007-04-24  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_text):  term_reset() tries to close down all files
	and pipes cleanly. But it called on exit, the pipe to gnuplot_x11 may
	already be closed. Don't try to write to it.  Bug #1706945.

2007-04-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Change the default to "blacktext" for the TeX-based
	terminal variants (pstex pslatex epslatex). This is more in line with
	the behaviour in versions 4.0 and earlier.  In particular it means that
	the default settings do not require you to include the color.sty
	package.

2007-04-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf):  Accept the ' format specifier, which
	asks for digits to be grouped and separated according to the current
	locale.  We just pass it on to the C library for application.
	Bug #1692550

2007-03-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Cross-reference 'set datafile fortran'.
